# Renderer

./: .gitmodules  CMakeLists.txt  README.md
include/: IndexBuffer.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
res/shaders/: Basic.shader
src/: Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  log.cpp  main.cpp
src/tests/: TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h  TestTexture3DP.cpp  TestTexture3DP.h  test.cpp  test.h
